--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="favicon.png" />
+    <link rel="icon" href="favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
+    <!-- <meta name="description" content="Social data protocol built on NEAR" /> -->
+    <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NearSocial_" />
+    <meta name="twitter:image" content="https://near.social/assets/logo.png" />
+    <meta property="og:image" content="https://near.social/assets/logo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Near Social" /> -->
+    <!-- <meta
+      property="og:description"
       content="Social data protocol built on NEAR"
-    />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@NearSocial_">
-    <meta name="twitter:image" content="https://near.social/assets/logo.png">
-    <meta property="og:image" content="https://near.social/assets/logo.png">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Near Social" />
-    <meta property="og:description" content="Social data protocol built on NEAR" />
-    <link rel="apple-touch-icon" href="favicon.png" />
+    /> -->
+    <link rel="apple-touch-icon" href="favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="manifest.json" />
-    <title>Near Social</title>
+    <title>Flipside BOS Gateway</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
