change meta description

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
-    <meta name="description" content="Flipside's hosting of BOS on Near" />
+    <meta
+      name="description"
+      content="Access unique NEAR insights on the BOS. Powered by Flipside."
+    />
     <!-- <meta name="twitter:card" content="summary_large_image" /> -->
     <!-- <meta name="twitter:site" content="@NearSocial_"> -->
     <!-- <meta property="og:image" content="https://near.social/assets/logo.png"> -->
@@ -19,7 +22,7 @@
     <meta property="og:title" content="Flipside BOS Gateway" />
     <meta
       property="og:description"
-      content="Flipside's hosting of BOS on Near"
+      content="Access unique NEAR insights on the BOS. Powered by Flipside."
     />
     <title>Flipside BOS Gateway</title>
   </head>
